# send-notification-to-slack

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  func.py  func.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml  release.yml
helm/eoepca2slack/: Chart.yaml  README.md  values.yaml
helm/eoepca2slack/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
