[project]
name = "send-notification-to-slack"
version = "1.0.0"
description = "Knative function that receives CloudEvents and prints them to console"
authors = [
    {name = "EOEPCA", email = "info@eoepca.org"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "pydantic-settings==2.1.0",
    "httpx==0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "pytest-asyncio>=0.21.0",
]
